# code-review-action

./: .dockerignore  .gitignore  AGENTS.md  BACKEND.md  Dockerfile  README.md  action.yml  pyproject.toml  requirements-server.txt  requirements.txt
.agents/models/: code-simplify.json
.agents/rules/: github.md  http.md  python.md
.agents/settings/: claude.json  codex.json
.agents/skills/ci-review/: SKILL.md
.agents/skills/ci-watch/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/code-review-loop/: SKILL.md
.agents/skills/code-simplify/: REVIEW_ONLY.md
.agents/skills/list-rules/: SKILL.md
.agents/skills/list-skills/: SKILL.md
.agents/skills/propagate-skill/: SKILL.md
.claude/: settings.json
.claude/hooks/: simplify-on-stop.sh
.claude/rules/: pydantic.md
.claude/skills/code-review/: SKILL.md
.codex/: config.toml
.codex/skills/: ci-review
.codex/skills/ci-review/: SKILL.md
.codex/skills/ci-watch/: SKILL.md
.codex/skills/code-review/: CI_REVIEW.md  RUBRIC.md  SKILL.md
.codex/skills/code-review-loop/: SKILL.md
.codex/skills/list-rules/: SKILL.md
.codex/skills/list-skills/: SKILL.md
.cursor/agents/: code-simplify.md
.cursor/rules/: http.mdc  pydantic.mdc
.github/scripts/: agent_sync.py
.github/scripts/agent_sync/: codex.py
.github/workflows/: agent-sync.yml  code-review.yml  publish-release.yml
src/code_review/: __main__.py  config.py  dogfood_demo.py  errors.py  github.py  prompt.py  review.py  review_comments.py  review_findings.py  review_threads.py  runtime.py  summary.py
src/code_review/models/: __init__.py  backend.py  codex.py  config.py  findings.py  github_event.py  pull_request.py  review.py  threads.py
src/code_review/review/: comments.py  findings.py  round.py  threads.py
src/code_review/review_backends/: claude.py  (+3 more)
src/code_review_server/: __main__.py  app.py  config.py  github_app.py  runtime.py  webhook.py  worker.py
tests/: conftest.py  test_action.py  test_config.py  test_github.py  test_prompt.py  test_review.py  test_review_comments.py  test_review_findings.py  test_review_threads.py  test_runtime.py  test_summary.py
tests/review/: test_comments.py  test_findings.py  test_round.py  test_threads.py
tests/review_backends/: test_claude.py  test_codex.py  test_cursor.py  test_jsonl.py
tests/server/: conftest.py  test_app.py  test_github_app.py  test_packaging.py  test_webhook.py  test_worker.py
tests/utils/: test_http.py  test_jsonl.py
(+28 files in other folders)
