[project]
name = "code-review-action"
version = "0.0.0"
description = "AI code review for pull requests using Claude or Cursor."
authors = [{ name = "julien777z" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "cursor-sdk>=1.0.24,<2",
    "httpx>=0.27",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.2,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-env>=1.1",
    "pyyaml>=6.0.3",
    "rich>=15",
]

[tool.poetry]
packages = [{ include = "code_review", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
env = [
    "GITHUB_TOKEN=test-token",
    "GITHUB_REPOSITORY=octo/repo",
]
